# msg-core

./: CMakeLists.txt
include/: logger.h  msg_core.h  msg_mqtt_paho.h  msg_pipe.h  msg_tcpip.h  msg_utils.h
src/: msg_core.c  msg_mqtt_paho.c  msg_pipe.c  msg_tcpip.c
test/: CMakeLists.txt  msg_core_runner.c  test_msg_core.c  test_msg_gcp_mqtt.c  test_msg_mqtt.c  test_msg_mqtt_paho.c  test_msg_pipe.c  test_msg_pipe_splitter.c  test_msg_tcpip.c  test_msg_utils.c
